--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           What truly drives me is the opportunity to leverage data-driven solutions to tackle real-world problems and make a tangible impact. Whether it's enhancing business strategies, optimizing processes, or driving innovation, I'm committed to harnessing the power of data to drive positive change. In addition to my technical prowess, I bring a strong analytical mindset, a knack for problem-solving, and a relentless drive for continuous learning to the table. I believe that in today's data-driven world, the possibilities are limitless, and I'm excited to be at the forefront of this transformative journey.      </p>
         </p>
       </div>
-      <h3>Skills and Lenguages</h3>
+      <h3>Skills and Languages</h3>
       <div class="about-content">
       <p>
         <span class="dot"></span>
@@ -67,7 +67,7 @@
       </p>
       <p id="projects">
         <span class="dot"></span>
-        <b>Lenguages: </b>B2 English Level and Native is Spanish
+        <b>Languages: </b>B2 English Level and Native is Spanish
       </p>
     </div>
     </section>
