--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <h2>Projects:</h2>
       <div class="projects-content">
         <h3>ETL and Data Visualization: Python, SQL, and Powerbi</h3>
-        <a href="https://github.com/LuisGon18/ETL-and-Data-Visualization-Python-SQL-and-Powerbi">See Project</a>
+        <a href="https://luisgon18.github.io/ETL-and-Data-Visualization-Python-SQL-and-Powerbi/">See Project</a>
         <p>
           <span class="dot"></span>
           In this project, I showcase my expertise in data transformation and visualization, demonstrating proficiency in key areas of data analytics. This includes Extract, Transform, Load (ETL) processes using Python, SQL database management, and dynamic data visualization with Power BI.
@@ -118,7 +118,7 @@
   <section>
     <div class="copyright">
       <div class="container">
-        <p>&copy; Luis Gonzalez. All rights reserved.</p>
+        <a href="https://github.com/LuisGon18">&copy; Luis Gonzalez. All rights reserved.</a>
       </div>
     </div>
   </section>
