--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
           <span class="dot"></span>
           In this project, I showcase my expertise in data transformation and visualization, demonstrating proficiency in key areas of data analytics. This includes Extract, Transform, Load (ETL) processes using Python, SQL database management, and dynamic data visualization with Power BI.
         </p>
-        <h3>Linux Network Wide Adblocker</h3>
-        <a href="https://github.com/LuisGon18/ETL-and-Data-Visualization-Python-SQL-and-Powerbi">See Project</a>
+        <h3>Create Your Own Portfolio Website Using My Template</h3>
+        <a href="https://luisgon18.github.io/Create-Your-Own-Portfolio-Website-Using-My-Template/">See Project</a>
         <p>
           <span class="dot"></span>
-          bla bla bla
+          Create your own portfolio website that will look just like this one, and host it for free using Github Pages.
       </div>
       </p>
     </div>
